--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
+    "multer": "^2.0.2",
+    "mysql2": "^3.15.3",
+    "qrious": "^4.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
